<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HID_SendMsg</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Send">Send</string>
    <string name="Backspace">Backspace</string>
    <string name="Enter">Enter</string>
    <string name="CtrlAltDel">Ctrl+Alt+Del</string>
    <string name="WinL">WinLock</string>

</resources>
